--- a/www.strong.io/index.html
+++ b/www.strong.io/index.html
@@ -181,7 +181,7 @@
                     <div class="row">
                         <div class="col-sm-11 col-md-8">
                             <span class="h2">
-                                We are the <span class="color--primary">CLP Big Data Team</span>, under the Department of Innovation.
+                                We are the <span style="font-weight: 700; color: #0b3d90">CLP Big Data Team</span>, under the Department of Innovation.
                             </span>
                             <div>
                                <a class="btn btn--primary type--uppercase" href="contact.html">
@@ -192,6 +192,7 @@
 	                            <span class="block type--fine-print">or
 	                                <a href="team.html">learn more about our team</a>.
 	                            </span>
+                                <br/>
                             </div>
                             <!--end of modal instance-->
                         </div>
@@ -204,116 +205,152 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12 col-md-12">
-                            <h2>We're full-stack data scientists, engineers, <em>and</em> app developers.</h2>
+
+                            <h1>  <span style="font-weight:bold", class="color--primary"> Our Expertise </span>   </h1>
+
+                            <h2>We're full-stack data scientists <em>and</em> engineers.</h2>
                             <p class="lead">
-                                We have the skills and experience to tackle your toughest data problems at scale.
+                                We have the skills and expertise to tackle your toughest data problems at scale.
                             </p>
+                            <br/>
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="text-center bg--secondary">
+
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="feature feature-3 boxed boxed--lg boxed--border text-center">
                                 <i class="icon icon--lg icon-Brain"></i>
-                                <h4><a href="machine-learning-development.html">Machine Learning Development</a></h4>
+                                <h4><span style="font-weight: 700; color: #0b3d90">Machine Learning Development</span></h4>
                                 <p>
                                     We can help you design and implement custom machine learning solutions to make your products smarter.
                                 </p>
+
+                                 <!--
+
                                 <a href="machine-learning-development.html">
                                     Learn More
                                 </a>
+
+                                -->
+
                             </div>
                             <!--end feature-->
                         </div>
                         <div class="col-sm-4">
                             <div class="feature feature-3 boxed boxed--lg boxed--border text-center">
                                 <i class="icon icon--lg icon-Bar-Chart4"></i>
-                                <h4><a href="data-science-analytics.html">Data Science &amp; Analytics</a></h4>
+                                <h4><span style="font-weight: 700; color: #0b3d90"> Data Science &amp; Analytics</span></h4>
                                 <p>
                                     Leverage your data to tackle your most challenging problems with structured or unstructured data, big and small.
                                 </p>
+                                <!--
                                 <a href="data-science-analytics.html">
                                     Learn More
                                 </a>
+                                -->
                             </div>
                             <!--end feature-->
                         </div>
                         <div class="col-sm-4">
                             <div class="feature feature-3 boxed boxed--lg boxed--border text-center">
                                 <i class="icon icon--lg icon-Server"></i>
-                                <h4><a href="big-data-infrastructure.html">Big Data Infrastructure</a></h4>
+                                <h4><span style="font-weight: 700; color: #0b3d90">Big Data Infrastructure</span></h4>
                                 <p>
                                     Implement data processing pipelines, streaming analytics, and data warehouses to process, analyze, and protect your data.
                                 </p>
+                                <!--
                                 <a href="big-data-infrastructure.html">
                                     Learn More
                                 </a>
+                                -->
                             </div>
                             <!--end feature-->
                         </div>
                     </div>
                     <!--end of row-->
                 </div>
-                <!--end of container-->
+
             </section>
+
             <section class="text-center">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-                            <h2>We work with top brands in a range of industries.</h2>
+                            <h1>  <span style="font-weight:bold", class="color--primary"> Projects Statistics </span>   </h1>
+                            <h2>We have achieved the following statistics </h2>
                             <p class="lead">
-                                Our team has worked in tech, manufacturing, e-commerce, marketing, IoT, and SaaS.
+                                Our team has collaborate with various departments within CLP.
                             </p>
                             <p>&nbsp;</p>
                         </div>
+
+                                                <div class="col-sm-4">
+                            <div class="feature feature-3 boxed boxed--lg boxed--border text-center">
+
+                                <h1><span style="font-weight: 700"  >20+</span></h1>
+                                <h4><span style="font-weight: 700; color: #0b3d90"  >Projects Completed</span></h4>
+
+
+                                 <!--
+
+                                <a href="machine-learning-development.html">
+                                    Learn More
+                                </a>
+
+                                -->
+
+                            </div>
+                            <!--end feature-->
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="feature feature-3 boxed boxed--lg boxed--border text-center">
+
+                                <h1><span style="font-weight: 700"  >10+</span></h1>
+                                <h4><span style="font-weight: 700; color: #0b3d90"  >On-going Projects </span></h4>
+
+                                <!--
+                                <p>
+                                    Leverage your data to tackle your most challenging problems with structured or unstructured data, big and small.
+                                </p>
+                                -->
+                                <!--
+                                <a href="data-science-analytics.html">
+                                    Learn More
+                                </a>
+                                -->
+                            </div>
+                            <!--end feature-->
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="feature feature-3 boxed boxed--lg boxed--border text-center">
+
+                                <h1><span style="font-weight: 700"  >15+</span></h1>
+                                <h4><span style="font-weight: 700; color: #0b3d90"  > Potential Use Cases </span></h4>
+
+                                <!--
+                                <a href="big-data-infrastructure.html">
+                                    Learn More
+                                </a>
+                                -->
+                            </div>
+                            <!--end feature-->
+                        </div>
+
                     </div>
                     <div class="row">
-                        <div class="row logos">
-	<div class="col-md-3 text--center">
-		<img alt="Mercedes-Benz" class="image--xs" src="img/logo-mercedes-benz.png">
-	</div>
-	<div class="col-md-3 text--center">
-		<img alt="Dictionary.com" class="image--xs" src="img/logo-dictionary.png">
-	</div>
-	<div class="col-md-3 text--center">
-		<img alt="Stitch Fix" class="image--xs" src="img/logo-stitch-fix.png">
-	</div>
-	<div class="col-md-3 text--center">
-		<img alt="Wind Creek Hospitality" class="image--xs" src="img/logo-wind-creek.png">
-	</div>
-	<div class="col-md-3 text--center">
-		<img alt="Micatu" class="image--xs" src="img/logo-micatu.png">
-	</div>
-	<div class="col-md-3 text--center">
-		<img alt="H&M" class="image--xs" src="img/logo-handm.png">
-	</div>
-	<div class="col-md-3 text--center">
-		<img alt="Hologram" class="image--xs" src="img/logo-hologram.png">
-	</div>
-	<div class="col-md-3 text--center">
-		<img alt="Monotype" class="image--xs" src="img/logo-monotype.png">
-	</div>
-	<div class="col-md-3 text--center">
-		<img alt="Taxbot" class="image--xs" src="img/logo-taxbot.png">
-	</div>
-	<div class="col-md-3 text--center">
-		<img alt="Bloodhub" class="image--xs" src="img/logo-bloodhub.png">
-	</div>
-	<div class="col-md-3 text--center">
-		<img alt="Vector Media Group" class="image--xs" src="img/logo-vector.png">
-	</div>
-	<div class="col-md-3 text--center">
-		<img alt="Top Box" class="image--xs" src="img/logo-topbox.png">
-	</div>
-</div>                    </div>
+              </div>
+
+
                     <!--end row-->
                 </div>
+
                 <!--end of container-->
             </section>
-            <section class="bg--secondary">
+            <section class="text-center bg--secondary">
+                <h1>  <span style="font-weight:bold", class="color--primary"> CLP Testimonials </span>   </h1>
+                <br/>
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-12">
@@ -364,7 +401,7 @@
                     <div class="row">
                         <div class="col-sm-12 col-md-12">
                             <div class="cta">
-                                <h2>Work with CLP Big Data Team on your next <br/> data science and analytics project.</h2>
+                                <h2>Work with <span style="font-weight: 700; color: #0b3d90">CLP Big Data Team</span> on your next <br/> data science and analytics project.</h2>
                                 <a class="btn btn--primary type--uppercase" href="contact.html">
                                     <span class="btn__text">
                                         Contact Us for an initiation meeting
@@ -436,10 +473,7 @@
             <i class="stack-interface stack-up-open-big"></i>
         </a>
         
-        <!-- Intercom -->
-		<script>window.intercomSettings={app_id:"yhiz5h5i"};</script>
-		<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/yhiz5h5i';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
-    </body>
+
 
 <!-- Mirrored from www.strong.io/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 26 Mar 2019 06:06:20 GMT -->
 </html>
