--- a/www.strong.io/index.html
+++ b/www.strong.io/index.html
@@ -77,80 +77,11 @@
                                         <a href="index.html">Home</a>
                                     </li>
                                     <li class="dropdown">
-                                        <span class="dropdown__trigger">Services</span>
-                                        <div class="dropdown__container">
-                                            <div class="container">
-                                                <div class="row">
-                                                    <div class="dropdown__content col-md-3 col-sm-6">
-                                                        <ul class="menu-vertical">
-	                                                        <li>
-                                                                <a href="machine-learning-development.html">Machine Learning Development</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="data-science-analytics.html">Data Science &amp; Analytics</a>
-                                                            </li>
-	                                                        <li>
-                                                                <a href="big-data-infrastructure.html">Big Data Infrastructure</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="app-development.html">Application Development</a>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                    <!--end dropdown content-->
-                                                </div>
-                                                <!--end row-->
-                                            </div>
-                                        </div>
+                                        <a href="projects.html">Projects</a>
+
                                         <!--end dropdown container-->
                                     </li>
-                                    <li class="dropdown">
-                                        <span class="dropdown__trigger">Products</span>
-                                        <div class="dropdown__container">
-                                            <div class="container">
-                                                <div class="row">
-                                                    <div class="dropdown__content col-md-3 col-sm-6">
-                                                        <ul class="menu-vertical">
-	                                                        <li>
-                                                                <a href="products/optimail.html">Optimail</a>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                    <!--end dropdown content-->
-                                                </div>
-                                                <!--end row-->
-                                            </div>
-                                        </div>
-                                        <!--end dropdown container-->
-                                    </li>
-                                    <li class="dropdown">
-                                        <a href="blog.html">Blog</a>
-                                    </li>
-                                    <li class="dropdown">
-                                        <span class="dropdown__trigger">Resources</span>
-                                        <div class="dropdown__container">
-                                            <div class="container">
-                                                <div class="row">
-                                                    <div class="dropdown__content col-md-3 col-sm-6">
-                                                        <ul class="menu-vertical">
-	                                                        <li>
-                                                                <a href="blog/data-science-audit.html">Data Science Audit</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="scholarship.html">Data Science Scholarship</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="blog/predictive-model-roi-calculator.html">Predictive Model ROI Calculator</a>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                    <!--end dropdown content-->
-                                                </div>
-                                                <!--end row-->
-                                            </div>
-                                        </div>
-                                        <!--end dropdown container-->
-                                    </li>
+
                                     <li class="dropdown">
                                         <a href="team.html">Our Team</a>
                                     </li>
