--- a/www.strong.io/index.html
+++ b/www.strong.io/index.html
@@ -45,7 +45,7 @@
                     <div class="row">
                         <div class="col-xs-6 col-sm-6">
                             <a href="index.html">
-                                <img class="logo" alt="logo" src="img/clp-logo.png" alt="Strong Analytics - Data Science Consulting and Machine Learning Development Firm" title="Strong Analytics - Data Science Consulting and Machine Learning Development Firm"/>
+                                <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data Team" title="CLP Big Data Team"/>
                             </a>
                         </div>
                         <div class="col-xs-6 col-sm-6 text-right">
@@ -65,7 +65,7 @@
                         <div class="col-md-3 col-sm-2 hidden-xs">
                             <div class="bar__module">
                                 <a href="index.html">
-                                    <img class="logo" alt="logo" src="img/clp-logo.png" alt="Strong Analytics - Data Science Consulting and Machine Learning Development Firm" title="Strong Analytics - Data Science Consulting and Machine Learning Development Firm"/>
+                                    <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data Team" title="CLP Big Data Team"/>
                                 </a>
                             </div>
                             <!--end module-->
@@ -89,7 +89,7 @@
                             </div>
                             <!--end module-->
                             <div class="bar__module">
-                                <a class="btn btn--sm btn--primary type--uppercase" href="contact.html">
+                                <a class="btn btn--sm btn--primary type--uppercase" href="mailto:bigdatateam@clp.com.hk">
                                     <span class="btn__text">
                                         Contact Us
                                     </span>
@@ -107,7 +107,7 @@
         
         <div class="main-container">
 	        
-	        	        <section class="cover height-60">
+            <section class="cover height-70">
                 <div class="container pos-vertical-center">
                     <div class="row">
                         <div class="col-sm-11 col-md-8">
@@ -115,14 +115,13 @@
                                 We are the <span style="font-weight: 700; color: #0b3d90">CLP Big Data Team</span>, under the Department of Innovation.
                             </span>
                             <div>
-                               <a class="btn btn--primary type--uppercase" href="contact.html">
+                               <a class="btn btn--primary type--uppercase" href="projects.html">
 	                                <span class="btn__text">
-	                                    Contact us about your project
+	                                    Explore our projects
 	                                </span>
 	                            </a>
-	                            <span class="block type--fine-print">or
-	                                <a href="team.html">learn more about our team</a>.
-	                            </span>
+
+                                <br/>
                                 <br/>
                             </div>
                             <!--end of modal instance-->
@@ -139,7 +138,7 @@
 
                             <h1>  <span style="font-weight:bold", class="color--primary"> Our Expertise </span>   </h1>
 
-                            <h2>We're full-stack data scientists <em>and</em> engineers.</h2>
+                            <h2>We're full-stack data scientists and engineers.</h2>
                             <p class="lead">
                                 We have the skills and expertise to tackle your toughest data problems at scale.
                             </p>
@@ -333,7 +332,7 @@
                         <div class="col-sm-12 col-md-12">
                             <div class="cta">
                                 <h2>Work with <span style="font-weight: 700; color: #0b3d90">CLP Big Data Team</span> on your next <br/> data science and analytics project.</h2>
-                                <a class="btn btn--primary type--uppercase" href="contact.html">
+                                <a class="btn btn--primary type--uppercase" href="mailto:bigdatateam@clp.com.hk">
                                     <span class="btn__text">
                                         Contact Us for an initiation meeting
                                     </span>
@@ -363,7 +362,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="contact.html">
+                                    <a href="mailto:bigdatateam@clp.com.hk">
                                         <span class="h6 type--uppercase">Contact Us</span>
                                     </a>
                                 </li>
