--- a/www.strong.io/projects.html
+++ b/www.strong.io/projects.html
@@ -5,7 +5,7 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
         <meta charset="utf-8">
-        <title>Projects</title>
+        <title>Projects - CLP Big Data Team</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="data science consulting, machine learning development, big data consulting, data scientists chicago, data scientists vancouver, machine learning chicago, machine learning vancouver, predictive models">
         <meta name="description" content="We design and implement big data strategies including data pipelines, data warehouses, and streaming analytics for organizations of all sizes.">
@@ -45,7 +45,7 @@
                     <div class="row">
                         <div class="col-xs-6 col-sm-6">
                             <a href="index.html">
-                                <img class="logo" alt="logo" src="img/clp-logo.png" alt="Strong Analytics - Data Science Consulting and Machine Learning Development Firm" title="Strong Analytics - Data Science Consulting and Machine Learning Development Firm"/>
+                                <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data Team" title="CLP Big Data Team"/>
                             </a>
                         </div>
                         <div class="col-xs-6 col-sm-6 text-right">
@@ -65,7 +65,7 @@
                         <div class="col-md-3 col-sm-2 hidden-xs">
                             <div class="bar__module">
                                 <a href="index.html">
-                                    <img class="logo" alt="logo" src="img/clp-logo.png" alt="Strong Analytics - Data Science Consulting and Machine Learning Development Firm" title="Strong Analytics - Data Science Consulting and Machine Learning Development Firm"/>
+                                    <img class="logo" alt="logo" src="img/clp-logo.png" alt="CLP Big Data Team" title="CLP Big Data Team"/>
                                 </a>
                             </div>
                             <!--end module-->
@@ -89,7 +89,7 @@
                             </div>
                             <!--end module-->
                             <div class="bar__module">
-                                <a class="btn btn--sm btn--primary type--uppercase" href="contact.html">
+                                <a class="btn btn--sm btn--primary type--uppercase" href="mailto:bigdatateam@clp.com.hk">
                                     <span class="btn__text">
                                         Contact Us
                                     </span>
@@ -120,7 +120,7 @@
                             </p>
                             <a class="btn btn--primary type--uppercase contact-landing-cta" href="contact.html">
                                 <span class="btn__text">
-                                    Contact us about your project
+                                    Download Case Study PDF
                                 </span>
                             </a>
                         </div>
@@ -134,7 +134,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="text-center col-sm-12 col-md-12">
-                            <h2>Our Services and Capabilities</h2>
+                            <h2><span style="font-weight:bold; color: #0b3d90">Current Projects</span></h2>
+                            <br/>
                         </div>
                     </div>
                     <div class="row">
@@ -142,6 +143,7 @@
                             <div class="feature feature-2 boxed boxed--border">
                                 <i class="icon icon-Coding color--primary"></i>
                                 <div class="feature__body">
+                                    <h4><span style="font-weight:bold; color: #0b3d90">Short Term Load Forecast</span></h4>
                                     <p>
                                         We offer custom <a href="machine-learning-consulting.html">machine learning consulting</a>
                             that brings modern machine learning tools to you.
@@ -154,6 +156,8 @@
                             <div class="feature feature-2 boxed boxed--border">
                                 <i class="icon icon-Brain color--primary"></i>
                                 <div class="feature__body">
+                                    <h4><span style="font-weight:bold; color: #0b3d90">Long Term Load Forecast</span></h4>
+
                                     <p>
                                         Leverage our <a href="ai-development.html">artificial intelligence development</a>
                             skills to build adaptive, intelligent products and tools.
@@ -166,6 +170,8 @@
                             <div class="feature feature-2 boxed boxed--border">
                                 <i class="icon icon-Physics color--primary"></i>
                                 <div class="feature__body">
+                                    <h4><span style="font-weight:bold; color: #0b3d90">Low-Voltage Cable</span></h4>
+
                                     <p>
                                         Build <a href="predictive-modeling.html">predictive models</a>
                             that classify and quantify new events and customers based on historical data.
@@ -178,6 +184,8 @@
                             <div class="feature feature-2 boxed boxed--border">
                                 <i class="icon icon-Optimization color--primary"></i>
                                 <div class="feature__body">
+                                    <h4><span style="font-weight:bold; color: #0b3d90">Typhoon Analytics</span></h4>
+
                                     <p>
                                         <a href="anomaly-detection.html">Detect anomalies</a> in your analytics and operations
 	                    	using intelligent machine learning algorithms.
@@ -190,6 +198,8 @@
                             <div class="feature feature-2 boxed boxed--border">
                                 <i class="icon icon-CPU color--primary"></i>
                                 <div class="feature__body">
+                                    <h4><span style="font-weight:bold; color: #0b3d90">Emission Prediction</span></h4>
+
                                     <p>
                                         Use recent advances in <a href="deep-learning.html">deep learning</a> and neural networks to find structure in noisy, complex input.
                                     </p>
@@ -201,6 +211,10 @@
                             <div class="feature feature-2 boxed boxed--border">
                                 <i class="icon icon-Gears color--primary"></i>
                                 <div class="feature__body">
+
+                                    <h4><span style="font-weight:bold; color: #0b3d90">Meter Irregularity</span></h4>
+
+
                                     <p>
                                         Leverage <a href="reinforcement-learning.html">reinforcement learning</a> to 
 	                    	build adaptive, intelligent agents that get smarter over time.
@@ -214,37 +228,17 @@
                 </div>
                 <!--end of container-->
             </section>
-            <section class="bg--secondary">
-                <div class="container">
-                    <div class="row text-center">
-                        <div class="col-sm-12">
-                            <ul class="list-inline list-inline--images">
-	                            <li><img alt="Python" src="img/xtech-python.png.pagespeed.ic.d7WOf29q8e.png"></li>
-	                            <li><img alt="R" src="img/xtech-R.png.pagespeed.ic.IOuYhVemGV.png"></li>
-	                            <li><img alt="TensorFlow" src="img/xtech-tensorflow.png.pagespeed.ic.Wdl2Y2fLre.png"></li>
-	                            <li><img alt="Theano" src="img/xtech-theano.png.pagespeed.ic.ODH6YelX4g.png"></li>
-	                            <li><img alt="SciKit Learn" src="img/xtech-sklearn.png.pagespeed.ic.cC_bYL8HMU.png"></li>
-	                            <li><img alt="Spark MLib" src="img/xtech-spark-mlib.png.pagespeed.ic.YAyrThGpEo.png"></li>
-	                            <li><img alt="Stan" src="img/xtech-stan.png.pagespeed.ic.DCPfUCTQ3a.png"></li>
-	                            <li><img alt="PyTorch" src="img/xtech-pytorch.png.pagespeed.ic.hV1TAo-ObH.png"></li>
-	                            <li><img alt="AWS Lambda" src="img/xtech-lambda.png.pagespeed.ic.byljDKA3Id.png"></li>
-                                <li><img alt="AWS EC2" src="img/xtech-ec2.png.pagespeed.ic.rVdWxqp9CO.png"></li>
-                                <li><img alt="AWS ML" src="img/xtech-awsml.png.pagespeed.ic.zeovXl-gNv.png"></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!--end of row-->
-                </div>
-            </section>            
             <section class="switchable feature-large">
                 <div class="container">
+                    <span class="text-center"><h2 style="font-weight:bold; color: #0b3d90">Upcoming Projects</h2></span>
+                    <br/>
                     <div class="row">
                         <div class="col-sm-6">
                             <img alt="Optimail Email Marketing Predictive Algorithm" class="border--round" src="img/xcase-optimail.png.pagespeed.ic.H_-EK9WmnX.png">
                         </div>
                         <div class="col-sm-6 col-md-5">
                             <div class="switchable__text">
-                                <h2>Email Marketing Optimization at Scale (Marketing)</h2>
+                                <h3 style="font-weight:bold">Electric Cooker Saving Estimation</h3>
                 <p class="lead">
                     We built several scalable data pipelines for receiving, analyzing, and learning from real-time customer behaviors across web and email.
                 </p>
@@ -264,7 +258,7 @@
                         </div>
                         <div class="col-sm-6 col-md-5">
                             <div class="switchable__text">
-                                <h2>Predictive Lead Scoring Algorithm (SaaS)</h2>
+                                <h3 style="font-weight:bold">Turbine Events Forecasting</h3>
                 <p class="lead">
                     We increased conversion rates by almost 200% with bespoke lead scoring algorithms powered by gradient boosting and recurrent neural networks.
                 </p>
@@ -281,10 +275,10 @@
                     <div class="row">
                         <div class="col-sm-12 col-md-12">
                             <div class="cta">
-                                <h2>Work with Strong on your next machine learning project.</h2>
-                                <a class="btn btn--primary type--uppercase" href="contact.html">
+                                <h2>Get to know the <span style="font-weight: 700; color: #0b3d90">CLP Big Data Team</span> in depth</h2>
+                                <a class="btn btn--primary type--uppercase" href="team.html">
                                     <span class="btn__text">
-                                        Contact Us for a Free Consultation
+                                        Our Team
                                     </span>
                                 </a>
                             </div>
@@ -336,10 +330,10 @@
                     <div class="row">
                         <div class="col-sm-7">
                             <span class="type--fine-print">&copy;
-                                <span class="update-year"></span> Strong Analytics LLC &mdash; Chicago, IL, USA &amp; Vancouver, BC, Canada</span>
+                                <span class="update-year"></span> CLP Big Data Team, Innovation &mdash; Hong Kong</span>
                         </div>
                         <div class="col-sm-5 text-right text-center-xs">
-                            <a class="type--fine-print" href="mailto:contact@strong.io">contact@strong.io</a>
+                            <a class="type--fine-print" href="mailto:bigdatateam@clp.com.hk">bigdatateam@clp.com.hk</a>
                         </div>
                     </div>
                     <!--end of row-->
@@ -352,9 +346,6 @@
             <i class="stack-interface stack-up-open-big"></i>
         </a>
         
-        <!-- Intercom -->
-		<script>window.intercomSettings={app_id:"yhiz5h5i"};</script>
-		<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/yhiz5h5i';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
     </body>
 
 <!-- Mirrored from www.strong.io/machine-learning-development by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 26 Mar 2019 06:06:46 GMT -->
